--- a/src/Microsoft.DotNet.Build.Tasks.net45/project.json
+++ b/src/Microsoft.DotNet.Build.Tasks.net45/project.json
@@ -3,6 +3,8 @@
     "Newtonsoft.Json": "7.0.1",
     "NuGet.Versioning": "3.4.0-beta-488",
     "System.Collections.Immutable": "1.1.37",
+    "System.Console": "4.0.0-rc2-23816",
+    "System.IO.FileSystem": "4.0.1-rc2-23816",
     "System.Reflection.Metadata": "1.1.0"
   },
   "frameworks": {
